--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: "3.9"
 services:
- randomizer-service:
-  image: jentelliekens/python-db-test
-  ports:
-    - "8000:8000"
-  volumes:
-    - sqlite_useritems_volume:/code/sqlitedb
+ api-service:
+    image: jentelliekens/python-db-test
+    ports:
+      - "8000:8000"
+    volumes:
+      - sqlite_useritems_volume:/code/sqlitedb
 
 volumes:
   sqlite_useritems_volume:
