--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "3.9"
 services:
- api-service:
+ randomizer-service:
     image: jentelliekens/python-db-test
     ports:
       - "8000:8000"
